# FastAPI-PostgreSQL

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  users.py
